# fullstack-practice

./: .gitignore  LITELLM_SETUP.md  README.md  copilot-instructions.md  package-lock.json  package.json
.github/instructions/: mui.md
.github/workflows/: ci.yml
architectural-decisions-record/: component-structure-002.md  styling-001.md
architecural-decisions-record/: adr-template.md  component-structure-002.md  styling-001.md
backend/: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  chat.db  docker-compose.yml  openapi.json  pyproject.toml  pyrightconfig.json  schema.graphql  seed_data.py  setup_database.py  setup_llm.sh  test_llm_integration.py  test_s3.py
backend/alembic/: env.py
backend/alembic/versions/: b5d1d17df847_add_stored_files_table_for_blob_storage.py  replace_file_data_with_s3_key.py
backend/app/: main.py
backend/app/api/: schema.py
backend/app/api/routes/: files.py  items.py  upload.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  chat.py  document.py  file.py  item.py
backend/app/services/: content_extraction.py  file_service.py  llm_service.py  s3_service.py
backend/tests/: conftest.py  test_file.txt  test_llm_integration.py  test_llm_service.py  test_main.py  test_s3.py
frontend/: .eslintignore  ATTACHMENT_FEATURE_README.md  codegen.ts  dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/.storybook/: decorators.ts  main.ts  preview.ts
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/components/: AttachmentList.tsx  COMPONENTS.md  Chat.tsx  ChatInput.tsx  ChatSection.tsx  ConversationView.tsx  DocumentCard.tsx  DocumentList.tsx  DocumentModal.tsx  DragResizeHandle.tsx  ErrorBoundary.tsx  FilterPanel.tsx  HelpTooltip.tsx  LoadingIndicator.tsx  MainContent.tsx  MarkdownRenderer.tsx  Matrix.tsx  MatrixStatus.tsx  PendingFileItem.tsx  PendingFiles.tsx  ResizablePanel.tsx  (+5 more)
(+118 files in other folders)
